--- a/portfolio.html
+++ b/portfolio.html
@@ -105,12 +105,32 @@
             <li class="example-list-item">
               <a href="#" class="example-list-link">
                 <div class="product-wrapper">
-                  <img
-                    src="./img/technokryak.jpg"
-                    alt="Технокряк"
-                    width="450"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./img-adaptive/phone/port/technokryak.jpg    1x,
+                        ./img-adaptive/phone/port/technokryak@2x.png 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+
+                    <source
+                      srcset="
+                        ./img-adaptive/tablet/port/technokryak.jpg    1x,
+                        ./img-adaptive/tablet/port/technokryak@2x.jpg 2x
+                      "
+                      media="(max-width: 1199px)"
+                    />
+                    <source
+                      srcset="
+                        ./img-adaptive/desktop/port/technokryak.jpg    1x,
+                        ./img-adaptive/desktop/port/technokryak@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <img src="./img/technokryak.jpg" alt="Технокряк" />
+                  </picture>
+
                   <div class="overlay">
                     <p class="animation">
                       Технокряк это современная площадка распространения
@@ -133,12 +153,32 @@
             <li class="example-list-item">
               <a href="#" class="example-list-link">
                 <div class="product-wrapper">
-                  <img
-                    src="./img/baskplay.jpg"
-                    alt="Постер баскетбол"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./img-adaptive/phone/port/baskplay.jpg    1x,
+                        ./img-adaptive/phone/port/baskplay@2x.png 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+
+                    <source
+                      srcset="
+                        ./img-adaptive/tablet/port/baskplay.jpg    1x,
+                        ./img-adaptive/tablet/port/baskplay@2x.jpg 2x
+                      "
+                      media="(max-width: 1199px)"
+                    />
+                    <source
+                      srcset="
+                        ./img-adaptive/desktop/port/baskplay.jpg    1x,
+                        ./img-adaptive/desktop/port/baskplay@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <img src="./img/baskplay.jpg" alt="Постер баскетбол" />
+                  </picture>
+
                   <div class="overlay">
                     <p class="animation">
                       Технокряк это современная площадка распространения
@@ -161,12 +201,32 @@
             <li class="example-list-item">
               <a href="#" class="example-list-link">
                 <div class="product-wrapper">
-                  <img
-                    src="./img/seafood.jpg"
-                    alt="Технокряк"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./img-adaptive/phone/port/seafood.jpg    1x,
+                        ./img-adaptive/phone/port/seafood@2x.png 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+
+                    <source
+                      srcset="
+                        ./img-adaptive/tablet/port/seafood.jpg    1x,
+                        ./img-adaptive/tablet/port/seafood@2x.jpg 2x
+                      "
+                      media="(max-width: 1199px)"
+                    />
+                    <source
+                      srcset="
+                        ./img-adaptive/desktop/port/seafood.jpg    1x,
+                        ./img-adaptive/desktop/port/seafood@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <img src="./img/seafood.jpg" alt="Ресторан" />
+                  </picture>
+
                   <div class="overlay">
                     <p class="animation">
                       Технокряк это современная площадка распространения
@@ -189,12 +249,32 @@
             <li class="example-list-item">
               <a href="#" class="example-list-link">
                 <div class="product-wrapper">
-                  <img
-                    src="./img/headphones.jpg"
-                    alt="Технокряк"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./img-adaptive/phone/port/headphones.jpg    1x,
+                        ./img-adaptive/phone/port/headphones@2x.png 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+
+                    <source
+                      srcset="
+                        ./img-adaptive/tablet/port/headphones.jpg    1x,
+                        ./img-adaptive/tablet/port/headphones@2x.jpg 2x
+                      "
+                      media="(max-width: 1199px)"
+                    />
+                    <source
+                      srcset="
+                        ./img-adaptive/desktop/port/headphones.jpg    1x,
+                        ./img-adaptive/desktop/port/headphones@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <img src="./img/headphones.jpg" alt="Наушники" />
+                  </picture>
+
                   <div class="overlay">
                     <p class="animation">
                       Технокряк это современная площадка распространения
@@ -217,12 +297,32 @@
             <li class="example-list-item">
               <a href="#" class="example-list-link">
                 <div class="product-wrapper">
-                  <img
-                    src="./img/boxes.jpg"
-                    alt="Технокряк"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./img-adaptive/phone/port/boxes.jpg    1x,
+                        ./img-adaptive/phone/port/boxes@2x.png 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+
+                    <source
+                      srcset="
+                        ./img-adaptive/tablet/port/boxes.jpg    1x,
+                        ./img-adaptive/tablet/port/boxes@2x.jpg 2x
+                      "
+                      media="(max-width: 1199px)"
+                    />
+                    <source
+                      srcset="
+                        ./img-adaptive/desktop/port/boxes.jpg    1x,
+                        ./img-adaptive/desktop/port/boxes@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <img src="./img/boxes.jpg" alt="Коробки" />
+                  </picture>
+
                   <div class="overlay">
                     <p class="animation">
                       Технокряк это современная площадка распространения
@@ -245,12 +345,32 @@
             <li class="example-list-item">
               <a href="#" class="example-list-link">
                 <div class="product-wrapper">
-                  <img
-                    src="./img/display.jpg"
-                    alt="Технокряк"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./img-adaptive/phone/port/display.jpg    1x,
+                        ./img-adaptive/phone/port/display@2x.png 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+
+                    <source
+                      srcset="
+                        ./img-adaptive/tablet/port/display.jpg    1x,
+                        ./img-adaptive/tablet/port/display@2x.jpg 2x
+                      "
+                      media="(max-width: 1199px)"
+                    />
+                    <source
+                      srcset="
+                        ./img-adaptive/desktop/port/display.jpg    1x,
+                        ./img-adaptive/desktop/port/display@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <img src="./img/display.jpg" alt="Дисплей" />
+                  </picture>
+
                   <div class="overlay">
                     <p class="animation">
                       Технокряк это современная площадка распространения
@@ -273,12 +393,32 @@
             <li class="example-list-item">
               <a href="#" class="example-list-link">
                 <div class="product-wrapper">
-                  <img
-                    src="./img/edition.jpg"
-                    alt="Технокряк"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./img-adaptive/phone/port/edition.jpg    1x,
+                        ./img-adaptive/phone/port/edition@2x.png 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+
+                    <source
+                      srcset="
+                        ./img-adaptive/tablet/port/edition.jpg    1x,
+                        ./img-adaptive/tablet/port/edition@2x.jpg 2x
+                      "
+                      media="(max-width: 1199px)"
+                    />
+                    <source
+                      srcset="
+                        ./img-adaptive/desktop/port/edition.jpg    1x,
+                        ./img-adaptive/desktop/port/edition@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <img src="./img/edition.jpg" alt="Книги" />
+                  </picture>
+
                   <div class="overlay">
                     <p class="animation">
                       Технокряк это современная площадка распространения
@@ -302,12 +442,32 @@
             <li class="example-list-item">
               <a href="#" class="example-list-link">
                 <div class="product-wrapper">
-                  <img
-                    src="./img/lab.jpg"
-                    alt="Технокряк"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./img-adaptive/phone/port/lab.jpg    1x,
+                        ./img-adaptive/phone/port/lab@2x.png 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+
+                    <source
+                      srcset="
+                        ./img-adaptive/tablet/port/lab.jpg    1x,
+                        ./img-adaptive/tablet/port/lab@2x.jpg 2x
+                      "
+                      media="(max-width: 1199px)"
+                    />
+                    <source
+                      srcset="
+                        ./img-adaptive/desktop/port/lab.jpg    1x,
+                        ./img-adaptive/desktop/port/lab@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <img src="./img/lab.jpg" alt="Тэг" />
+                  </picture>
+
                   <div class="overlay">
                     <p class="animation">
                       Технокряк это современная площадка распространения
@@ -331,12 +491,32 @@
             <li class="example-list-item">
               <a href="#" class="example-list-link">
                 <div class="product-wrapper">
-                  <img
-                    src="./img/grbus.jpg"
-                    alt="Технокряк"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./img-adaptive/phone/port/grbus.jpg    1x,
+                        ./img-adaptive/phone/port/grbus@2x.png 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+
+                    <source
+                      srcset="
+                        ./img-adaptive/tablet/port/grbus.jpg    1x,
+                        ./img-adaptive/tablet/port/grbus@2x.jpg 2x
+                      "
+                      media="(max-width: 1199px)"
+                    />
+                    <source
+                      srcset="
+                        ./img-adaptive/desktop/port/grbus.jpg    1x,
+                        ./img-adaptive/desktop/port/grbus@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <img src="./img/grbus.jpg" alt="Экран монитора" />
+                  </picture>
+
                   <div class="overlay">
                     <p class="animation">
                       Технокряк это современная площадка распространения
